src/styles/style.css
body {
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: #f0f0f0;
}

.footer {
  position: fixed;
  bottom: 10px;
  left: 10px;
}

.github-icon {
  width: 30px;
  height: 30px;
}

.diagram-container {
  width: 100%;
  max-width: 100%;
  overflow: auto;
  display: flex;
  justify-content: center;
  align-items: center;
}

svg {
  width: 100%;
  height: auto;
  max-width: 100%;
}

.app-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.title-legend-container {
  max-width: 800px;
  margin: 20px;
  padding: 20px;
  background-color: #ffffff;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
}

h1 {
  text-align: center;
  color: #333;
}

p {
  text-align: center;
  color: #666;
  margin-bottom: 20px;
}

